# grow-a-robloxian-discord-bot

./: .env.example  Cargo.toml  Dockerfile  README.md
data/: rules.md
src/: main.rs  rng.rs  stock.rs
src/commands/: rules.rs
